Removed the async loaded

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<h4> Click anywhere to draw a rainbow! </h4>
 		<canvas id="rainbowCanvas"></canvas>
 	</div>
-<script src="/js/rainbowOverlay.js" type="text/javascript" async defer></script>
-<script type="text/javascript" charset="utf-8" async defer>
+<script src="/js/rainbowOverlay.js" type="text/javascript"></script>
+<script type="text/javascript">
 	document.addEventListener("DOMContentLoaded", function(event) { 
 	  //do work
 	  var rainbow = new rainbowOverlay();
